gccida/g3/toe64
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/toe64/src/real.c:4193:29: error: use of undeclared identifier 'XFlittlenan'
*( _QWORD *)b = *( _QWORD *)XFlittlenan; 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/toe64/src/real.c:4195:8: error: use of undeclared identifier 'XFlittlenan'
b[4] = XFlittlenan[4]; 
       ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/toe64/src/obj/real.o] Error 1
